# FopMath

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  functies.cpp  main.cpp  main.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: workflow.yml
