[metadata]
name = FopMath
version = 0.1.0
description = C++ math utilities
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: C++
    Operating System :: OS Independent

[options]
python_requires = >=3.7
zip_safe = False
